// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module "adapter/http" #default() resolves with a request/response tuple 1`] = `
Array [
  Request {
    "defaultParams": Object {},
    "encrypted": false,
    "headers": Map {},
    "logger": Logger {
      "enabled": false,
      "filter": Object {
        "params": Array [],
      },
      "format": "text",
      "level": "WARN",
    },
    "method": "GET",
    "params": Object {},
    "url": Object {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "/posts",
      "params": Array [],
      "path": "/posts",
      "pathname": "/posts",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
  },
  Response {
    "end": [Function],
    "getHeader": [Function],
    "headers": Map {},
    "logger": Logger {
      "enabled": false,
      "filter": Object {
        "params": Array [],
      },
      "format": "text",
      "level": "WARN",
    },
    "removeHeader": [Function],
    "send": [Function],
    "setHeader": [Function],
    "stats": Array [],
    "status": [Function],
    "statusCode": 200,
    "statusMessage": "OK",
  },
]
`;

exports[`module "adapter/http" #request #create() - with body - without error builds a request from an http.IncomingMessage 1`] = `
Request {
  "defaultParams": Object {},
  "encrypted": false,
  "headers": Map {
    "content-type" => "application/vnd.api+json",
    "content-length" => 87,
  },
  "logger": Logger {
    "enabled": false,
    "filter": Object {
      "params": Array [],
    },
    "format": "text",
    "level": "ERROR",
  },
  "method": "POST",
  "params": Object {
    "data": Object {
      "data": Object {
        "attributes": Object {
          "body": "",
          "is-public": false,
          "title": "New Post",
        },
        "type": "posts",
      },
    },
  },
  "url": Object {
    "auth": null,
    "hash": null,
    "host": null,
    "hostname": null,
    "href": "/posts",
    "params": Array [],
    "path": "/posts",
    "pathname": "/posts",
    "port": null,
    "protocol": null,
    "query": null,
    "search": null,
    "slashes": null,
  },
}
`;

exports[`module "adapter/http" #request #create() - without body builds a request from an http.IncomingMessage 1`] = `Promise {}`;

exports[`module "adapter/http" #response #create() => Response #removeHeader() proxies headers#delete() 1`] = `
Map {
  "content-type" => "application/vnd.api+json",
}
`;

exports[`module "adapter/http" #response #create() => Response #setHeader() proxies headers#set() 1`] = `
Map {
  "content-type" => "application/vnd.api+json",
  "x-test-header" => "true",
}
`;

exports[`module "adapter/http" #response #create() => Response #status() properly modifies the status code 1`] = `
Response {
  "end": [Function],
  "getHeader": [Function],
  "headers": Map {},
  "logger": Logger {
    "enabled": false,
    "filter": Object {
      "params": Array [],
    },
    "format": "text",
    "level": "ERROR",
  },
  "removeHeader": [Function],
  "send": [Function],
  "setHeader": [Function],
  "stats": Array [],
  "status": [Function],
  "statusCode": 201,
  "statusMessage": "OK",
}
`;

exports[`module "adapter/http" #response #create() builds a response from an http.ServerResponse 1`] = `
Response {
  "end": [Function],
  "getHeader": [Function],
  "headers": Map {},
  "logger": Logger {
    "enabled": false,
    "filter": Object {
      "params": Array [],
    },
    "format": "text",
    "level": "ERROR",
  },
  "removeHeader": [Function],
  "send": [Function],
  "setHeader": [Function],
  "stats": Array [],
  "status": [Function],
  "statusCode": 200,
  "statusMessage": "OK",
}
`;
